--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ buildscript {
 	}
 	
 	dependencies {
-		classpath group: 'com.github.ben-manes',	name: 'gradle-versions-plugin',	version: gradleVersionsPlugin
+		classpath group: 'com.github.ben-manes',		name: 'gradle-versions-plugin',	version: gradleVersionsVersion
+		classpath group: 'nl.javadude.gradle.plugins',	name: 'license-gradle-plugin',	version: gradleLicenceVersion
 	}
 }
 
@@ -12,6 +13,7 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply from: 'ide-java.gradle'
 apply plugin: 'com.github.ben-manes.versions'
+apply from: 'licence.gradle'
 
 repositories {
 	jcenter()
