--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@ version = 0.1.0-SNAPSHOT
 gradleWrapperVersion = 2.3
 
 # plugins versions
-gradleVersionsPlugin = 0.8
+gradleVersionsVersion = 0.8
+gradleLicenceVersion = 0.11.0
 
 # compile dependencies versions
 spockVersion = 0.7-groovy-2.0
