--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ buildscript {
 	}
 	
 	dependencies {
-		classpath group: 'com.github.ben-manes',		name: 'gradle-versions-plugin',	version: gradleVersionsVersion
-		classpath group: 'nl.javadude.gradle.plugins',	name: 'license-gradle-plugin',	version: gradleLicenceVersion
+		classpath group: 'com.github.ben-manes',		name: 'gradle-versions-plugin',	version: '0.8'
+		classpath group: 'nl.javadude.gradle.plugins',	name: 'license-gradle-plugin',	version: '0.11.0'
 	}
 }
 
@@ -23,11 +23,11 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-	compile group: 'org.spockframework',			name: 'spock-core',	version: spockVersion
-	compile group: 'com.tobedevoured.modelcitizen',	name: 'core',		version: modelcitizenVersion
+	compile group: 'org.spockframework',			name: 'spock-core',	version: '0.7-groovy-2.0'
+	compile group: 'com.tobedevoured.modelcitizen',	name: 'core',		version: '0.8.1'
 	
-	testCompile group: 'junit',					name: 'junit',		version: junitVersion
-	testCompile group: 'org.codehaus.groovy',	name: 'groovy-all',	version: groovyVersion	
+	testCompile group: 'junit',					name: 'junit',		version: '4.12'
+	testCompile group: 'org.codehaus.groovy',	name: 'groovy-all',	version: '2.4.1'	
 	
 }
 
