--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,19 @@ buildscript {
 	dependencies {
 		classpath group: 'com.github.ben-manes',		name: 'gradle-versions-plugin',	version: gradleVersionsVersion
 		classpath group: 'nl.javadude.gradle.plugins',	name: 'license-gradle-plugin',	version: gradleLicenceVersion
+		classpath group: 'org.kt3k.gradle.plugin',		name: 'coveralls-gradle-plugin',	version: gradleCoverallsVersion
 	}
 }
 
 apply plugin: 'java'
 apply plugin: 'groovy'
-apply from: 'ide-java.gradle'
 apply plugin: 'com.github.ben-manes.versions'
+apply plugin: 'com.github.kt3k.coveralls'
+
+apply from: 'ide-java.gradle'
 apply from: 'licence.gradle'
+apply from: 'jacoco.gradle'
+
 
 repositories {
 	jcenter()
