--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,8 @@ gradleWrapperVersion = 2.3
 # plugins versions
 gradleVersionsVersion = 0.8
 gradleLicenceVersion = 0.11.0
+gradleCoverallsVersion = 2.3.1
+jacocoVersion = 0.7.3.201502191951
 
 # compile dependencies versions
 spockVersion = 0.7-groovy-2.0
