--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,12 @@ dependencies {
 	compile group: 'org.spockframework',			name: 'spock-core',	version: spockVersion
 	compile group: 'com.tobedevoured.modelcitizen',	name: 'core',		version: modelcitizenVersion
 	
-	testCompile group: 'junit',					name: 'junit',		version: junitVersion
-	testCompile group: 'org.codehaus.groovy',	name: 'groovy-all',	version: groovyVersion	
+	testCompile group: 'junit',					name: 'junit',							version: junitVersion
+	testCompile group: 'org.codehaus.groovy',	name: 'groovy-all',						version: groovyVersion
+	testCompile group: 'org.powermock',			name: 'powermock-module-junit4',		version: powermockVersion
+	testCompile group: 'org.powermock',			name: 'powermock-module-junit4-rule',	version: powermockVersion
+	testCompile group: 'org.powermock',			name: 'powermock-api-mockito',			version: powermockVersion
+	testCompile group: 'org.powermock',			name: 'powermock-classloading-xstream',	version: powermockVersion
 }
 
 test {
