--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,8 @@ gradleWrapperVersion = 2.3
 gradleVersionsVersion = 0.8
 gradleLicenceVersion = 0.11.0
 gradleCoverallsVersion = 2.3.1
-jacocoVersion = 0.7.3.201502191951
+gradleCoberturaVersion = 2.2.5
+coberturaVersion = 2.1.1
 
 # compile dependencies versions
 spockVersion = 0.7-groovy-2.0
