--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: java
 jdk: oraclejdk8
 script: "./gradlew clean build"
 after_success:
-- ./gradlew jacocoTestReport coveralls
+- ./gradlew cobertura coveralls
