--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,4 @@ jdk: oraclejdk8
 script: "./gradlew clean build"
 after_success:
 - ./gradlew jacocoTestReport coveralls
+- ./gradlew artifactoryPublish bintrayUpload
