--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,18 @@
+/**
+ * Main configuration file
+ */
+
 buildscript {
 	repositories {
 		jcenter()
 	}
 	
 	dependencies {
-		classpath group: 'com.github.ben-manes',		name: 'gradle-versions-plugin',	version: gradleVersionsVersion
-		classpath group: 'nl.javadude.gradle.plugins',	name: 'license-gradle-plugin',	version: gradleLicenceVersion
-		classpath group: 'org.kt3k.gradle.plugin',		name: 'coveralls-gradle-plugin',	version: gradleCoverallsVersion
+		classpath group: 'com.github.ben-manes',		name: 'gradle-versions-plugin',			version: gradleVersionsVersion
+		classpath group: 'nl.javadude.gradle.plugins',	name: 'license-gradle-plugin',			version: gradleLicenceVersion
+		classpath group: 'org.kt3k.gradle.plugin',		name: 'coveralls-gradle-plugin',		version: gradleCoverallsVersion
+		classpath group: 'com.jfrog.bintray.gradle',	name: 'gradle-bintray-plugin',			version: gradleBintrayVersion
+		classpath group: 'org.jfrog.buildinfo',			name: 'build-info-extractor-gradle',	version: gradleArtifactoryVersion
 	}
 }
 
@@ -18,6 +24,8 @@ apply plugin: 'com.github.kt3k.coveralls'
 apply from: 'ide-java.gradle'
 apply from: 'licence.gradle'
 apply from: 'jacoco.gradle'
+apply from: 'bintray.gradle'
+apply from: 'ojo.gradle'
 
 
 repositories {
