--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # artifact properties
-group = org.gerzog.spock
+group = org.gerzog
 version = 0.1.0-SNAPSHOT
+description = Simple library for integration Spockframework and Model-Citizen libraries
 
 # gradle properties
 gradleWrapperVersion = 2.3
@@ -9,6 +10,8 @@ gradleWrapperVersion = 2.3
 gradleVersionsVersion = 0.8
 gradleLicenceVersion = 0.11.0
 gradleCoverallsVersion = 2.3.1
+gradleBintrayVersion = 1.1
+gradleArtifactoryVersion = 3.0.1
 jacocoVersion = 0.7.3.201502191951
 
 # compile dependencies versions
