--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: java
 jdk: oraclejdk8
-script: "./gradlew clean build"
+script: "./gradlew clean build publishToRepo"
 after_success:
 - ./gradlew jacocoTestReport coveralls
-- ./gradlew artifactoryPublish bintrayUpload
