--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # artifact properties
-group = org.gerzog
+group = org.gerzog.spock-extenstions
 version = 0.1.0-SNAPSHOT
 description = Simple library for integration Spockframework and Model-Citizen libraries
 
