--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ jdk: oraclejdk8
 script: "./gradlew clean build publishToRepo"
 after_success:
 - "./gradlew jacocoTestReport coveralls"
+- "./gradlew travisciTrgger"
 env:
   global:
-    secure: IZUFECrJgpt23u/rbSx8Lv2Yg+NfQa58vrHAU51Gym3NGA4E+W5rf2Eqvmfpgxd/dFkRwbAl0u26fVOOmSOjWN3go16TY5jea5Fimz4y2ROvNekhYMFAbUiZBKsbcLUeuHh1TvdM9rSR+Rsk6Y8tYwMnczlB3XXVrwi7hAjmrfY=
+  - secure: IZUFECrJgpt23u/rbSx8Lv2Yg+NfQa58vrHAU51Gym3NGA4E+W5rf2Eqvmfpgxd/dFkRwbAl0u26fVOOmSOjWN3go16TY5jea5Fimz4y2ROvNekhYMFAbUiZBKsbcLUeuHh1TvdM9rSR+Rsk6Y8tYwMnczlB3XXVrwi7hAjmrfY=
+  - secure: QGRRez1lJat918L3fsdv/fu4Bq1dx5I04DAwvdxZCdbtsUKoK+PpPeR7y4ThakAtLk6dvwxgLQl6PrJcOT3bT8qCw7x10mr+4I0bft1KymR/v09FSJ+NAO+R3xl53WzXPYpddj2zKxwQZb8cFBA+24tqsqRgLMcXLU3dpcthwkA=
