prepare release plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # artifact properties
 group = org.gerzog.spock-extensions
-version = 0.1.0-SNAPSHOT
+version=0.1.0-SNAPSHOT
 description = Simple library for integration Spockframework and Model-Citizen libraries
 
 # gradle properties
@@ -13,6 +13,7 @@ gradleCoverallsVersion = 2.3.1
 gradleBintrayVersion = 1.1
 gradleArtifactoryVersion = 3.0.3
 gradleTravisCIVersion = 1.0.0
+gradleReleaseVersion=2.0.2
 jacocoVersion = 0.7.4.201502262128
 
 # compile dependencies versions
