[Gradle Release Plugin] - pre tag commit:  '0.1.0'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,27 @@
+#Tue, 03 Mar 2015 16:37:28 +0300
 # artifact properties
-group = org.gerzog.spock-extensions
-version=0.1.0-SNAPSHOT
-description = Simple library for integration Spockframework and Model-Citizen libraries
+group=org.gerzog.spock-extensions
+version=0.1.0
+description=Simple library for integration Spockframework and Model-Citizen libraries
 
 # gradle properties
-gradleWrapperVersion = 2.3
+gradleWrapperVersion=2.3
 
 # plugins versions
-gradleVersionsVersion = 0.8
-gradleLicenceVersion = 0.11.0
-gradleCoverallsVersion = 2.3.1
-gradleBintrayVersion = 1.1
-gradleArtifactoryVersion = 3.0.3
-gradleTravisCIVersion = 1.0.0
+gradleVersionsVersion=0.8
+gradleLicenceVersion=0.11.0
+gradleCoverallsVersion=2.3.1
+gradleBintrayVersion=1.1
+gradleArtifactoryVersion=3.0.3
+gradleTravisCIVersion=1.0.0
 gradleReleaseVersion=2.0.2
-jacocoVersion = 0.7.4.201502262128
+jacocoVersion=0.7.4.201502262128
 
 # compile dependencies versions
-spockVersion = 1.0-groovy-2.4
-modelcitizenVersion = 0.8.1
+spockVersion=1.0-groovy-2.4
+modelcitizenVersion=0.8.1
 
 # test dependencies versions
-junitVersion = 4.12
-groovyVersion = 2.4.1
-cglibVersion = 3.1
+junitVersion=4.12
+groovyVersion=2.4.1
+cglibVersion=3.1
