--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-#Tue, 03 Mar 2015 16:37:28 +0300
+#Tue, 03 Mar 2015 16:37:50 +0300
 # artifact properties
 group=org.gerzog.spock-extensions
-version=0.1.0
+version=0.2.0-SNAPSHOT
 description=Simple library for integration Spockframework and Model-Citizen libraries
 
 # gradle properties
