--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 	testCompile group: 'junit',					name: 'junit',		version: junitVersion
 	testCompile group: 'org.codehaus.groovy',	name: 'groovy-all',	version: groovyVersion
 	testCompile group: 'cglib',					name: 'cglib',		version: cglibVersion
+	testCompile group: 'org.objenesis',			name: 'objenesis',	version: objenesisVersion
 }
 
 test {
