--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,18 @@ test {
 	exclude 'org/gerzog/spock/modelcitizen/test/specs'	
 }
 
+//some hacking to compile Groovy first (since it contains Trait class that used in Java-based AST Transformation)
+sourceSets {
+	main {
+		groovy {
+			srcDirs = ['src/main/groovy', 'src/main/java']
+		}
+		java {
+			srcDirs = []
+		}
+	}
+}
+
 task wrapper(type: Wrapper) {
 	gradleVersion = gradleWrapperVersion
 }
