--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,8 @@ gradleArtifactoryVersion=3.0.3
 gradleTravisCIVersion=1.0.0
 gradleReleaseVersion=2.0.2
 jacocoVersion=0.7.4.201502262128
+findbugsVersion=3.0.1
+codenarcVersion=0.23
 
 # compile dependencies versions
 spockVersion=1.0-groovy-2.4
