--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ apply from: 'gradle/custom/publish.gradle'
 apply from: 'gradle/custom/travisci.gradle'
 apply from: 'gradle/custom/findbugs.gradle'
 apply from: 'gradle/custom/codenarc.gradle'
+apply from: 'gradle/custom/pmd.gradle'
 
 repositories {
 	jcenter()
