--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ gradleReleaseVersion=2.0.2
 jacocoVersion=0.7.4.201502262128
 findbugsVersion=3.0.1
 codenarcVersion=0.23
+pmdVersion=5.2.3
 
 # compile dependencies versions
 spockVersion=1.0-groovy-2.4
