--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-#Tue, 03 Mar 2015 16:37:50 +0300
+#Fri, 20 Mar 2015 18:00:26 +0300
 # artifact properties
 group=org.gerzog.spock-extensions
-version=0.2.0-SNAPSHOT
+version=0.2.0
 description=Simple library for integration Spockframework and Model-Citizen libraries
 
 # gradle properties
