[Gradle Release Plugin] - new version commit:  '0.3.0-SNAPSHOT'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-#Fri, 20 Mar 2015 18:00:26 +0300
+#Fri, 20 Mar 2015 18:01:08 +0300
 # artifact properties
 group=org.gerzog.spock-extensions
-version=0.2.0
+version=0.3.0-SNAPSHOT
 description=Simple library for integration Spockframework and Model-Citizen libraries
 
 # gradle properties
