--- a/build.gradle
+++ b/build.gradle
@@ -41,13 +41,16 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-	compile group: 'org.spockframework',			name: 'spock-core',	version: spockVersion
-	compile group: 'com.tobedevoured.modelcitizen',	name: 'core',		version: modelcitizenVersion
-	compile group: 'org.codehaus.groovy',			name: 'groovy-all',	version: groovyVersion
+	compile group: 'org.spockframework',			name: 'spock-core',		version: spockVersion
+	compile group: 'com.tobedevoured.modelcitizen',	name: 'core',			version: modelcitizenVersion
+	compile group: 'org.codehaus.groovy',			name: 'groovy-all',		version: groovyVersion
+	compile group: 'org.apache.commons',			name: 'commons-lang3',	version: commonsLangVersion
 	
-	testCompile group: 'junit',					name: 'junit',		version: junitVersion
-	testCompile group: 'cglib',					name: 'cglib',		version: cglibVersion
-	testCompile group: 'org.objenesis',			name: 'objenesis',	version: objenesisVersion
+	testCompile group: 'junit',				name: 'junit',				version: junitVersion
+	testCompile group: 'cglib',				name: 'cglib',				version: cglibVersion
+	testCompile group: 'org.objenesis',		name: 'objenesis',			version: objenesisVersion
+	testCompile group: 'ch.qos.logback',	name: 'logback-classic',	version: logbackVersion
+	testCompile group: 'org.slf4j',			name: 'slf4j-api',		    version: slf4jVersion
 }
 
 test {
