--- a/gradle.properties
+++ b/gradle.properties
@@ -24,8 +24,11 @@ pmdVersion=5.2.3
 spockVersion=1.0-groovy-2.4
 modelcitizenVersion=0.8.1
 groovyVersion=2.4.3
+commonsLangVersion=3.3.2
 
 # test dependencies versions
 junitVersion=4.12
 cglibVersion=3.1
 objenesisVersion=2.1
+logbackVersion=1.1.2
+slf4jVersion=1.7.10
