--- a/gradle/custom/pmd.gradle
+++ b/gradle/custom/pmd.gradle
@@ -6,7 +6,7 @@ dependencies {
 
 pmd {
 	toolVersion = pmdVersion
-	ruleSetFiles = files('config/pmd/design.xml', 'config/pmd/unusedcode.xml')
+	ruleSetFiles = files('config/pmd/design.xml', 'config/pmd/unusedcode.xml', 'config/pmd/strictexception.xml')
 	ruleSets = [ 
 		'java-basic', 
 		'java-braces', 
@@ -15,8 +15,7 @@ pmd {
 		'java-finalizers',
 		'java-imports',
 		'java-naming',
-		'java-optimizations',
-		'java-strictexception',
+		'java-optimizations',		
 		'java-strings',
 		'java-typeresolution',
 		'java-unnecessary',
