--- a/gradle/custom/findbugs.gradle
+++ b/gradle/custom/findbugs.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'findbugs'
 
 findbugs {
+	excludeFilter = file('config/findbugs/exclude.xml')
 	toolVersion = findbugsVersion
 	effort = 'max'
 }
