--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-#Fri, 20 Mar 2015 18:01:08 +0300
+#Tue, 24 Mar 2015 15:36:20 +0300
 # artifact properties
 group=org.gerzog.spock-extensions
-version=0.3.0-SNAPSHOT
+version=0.3.0
 description=Simple library for integration Spockframework and Model-Citizen libraries
 
 # gradle properties
