[Gradle Release Plugin] - new version commit:  '0.4.0-SNAPSHOT'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-#Tue, 24 Mar 2015 15:36:20 +0300
+#Tue, 24 Mar 2015 15:37:13 +0300
 # artifact properties
 group=org.gerzog.spock-extensions
-version=0.3.0
+version=0.4.0-SNAPSHOT
 description=Simple library for integration Spockframework and Model-Citizen libraries
 
 # gradle properties
