[Gradle Release Plugin] - pre tag commit:  '0.3.1'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-#Tue, 24 Mar 2015 15:37:13 +0300
+#Mon, 13 Apr 2015 14:13:42 +0300
 # artifact properties
 group=org.gerzog.spock-extensions
-version=0.4.0-SNAPSHOT
+version=0.3.1
 description=Simple library for integration Spockframework and Model-Citizen libraries
 
 # gradle properties
